# timed-design

./: .gitignore  Dockerfile  README.md  analyse.py  analyse_rotamers.py  fix_protease.py  predict.py  pyproject.toml  requirements.txt  requirements_headless.txt  sample.py  setup.py  setup.sh  ui.py  ui2.py  utils.py
analysis/: utils.py
design_utils/: analyse.py  analyse_utils.py  sampling_utils.py  utils.py
scripts/: README.md  af2_script_maker.py  analyse_af2.py  analyse_af2_one_folder.py  analyse_all_properties.py  analyse_alphafold_temps.ipynb  analyse_cherrypicked_samples_af2.py  move_af2_pdb.py  partition_structures_to_files.py  plot_af2_temperature.py  plot_all_models_af2_temp.py  plot_scwrl_analysis.py  plot_temperature.py  run_af.sh  run_analyse_af2_all_models.sh  run_analyse_all_properties.sh  run_benchmark_models.sh  run_netsolp.sh  run_rotamer_analysis.sh  run_sampling.sh
tests/: test_sampling.py  test_sampling_utils.py  test_utils.py
utils/: analyse.py  analyse_utils.py  sampling_utils.py  scwrl_utils.py  utils.py
