[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "TIMED-Design"
version = "1.0.1"
requires-python = ">= 3.8"
description = "TIMED-Design is a library to use protein sequence design models and analyse predictions."
readme = "README.md"
dependencies = [
    "altair==4.2.0",
    "ampal==1.5.1",
    "aposteriori==2.4.0",
    "ipython_genutils",
    "logomaker==0.8",
    "matplotlib==3.5.1",
    "millify==0.1.1",
    "py3Dmol==2.0.0.post2",
    "requests==2.32.0",
    "scikit_learn==1.3.2",
    "seaborn==0.11.2",
    "setuptools>=65.5.1",
    "stmol==0.0.9",
    "streamlit==1.37.0",
    "tensorflow==2.13.0",
    "tqdm==4.66.3"
]
